fixing z-index of navbar (#29)

--- a/src/smithsonian/js/themes/smithsonian/css/metacatui.css
+++ b/src/smithsonian/js/themes/smithsonian/css/metacatui.css
@@ -872,7 +872,7 @@ nav#Navbar {
   top: 0px;
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   height: var(--nav-height);
 }
 
